<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_empty"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_screen">

    <Button
        android:id="@+id/button_start3"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_above="@+id/registerLog"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_start2"
        android:fontFamily="@font/roboto_bold"
        android:onClick="onClick"
        android:text="@string/log_in_start"
        android:textAppearance="@style/sign_up_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerlog1"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="66dp"
        android:layout_toEndOf="@+id/registerLog"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:onClick="run"
        android:text="@string/registerSign"
        android:textAppearance="@style/register2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="21sp"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/registerLog"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="66dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/registerLog"
        android:textAppearance="@style/register"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="21sp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_below="@+id/password_2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="33dp"
        android:autofillHints=""
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#070101"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/password_2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_below="@+id/editTextTextEmailAddress2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/sign_up"
        android:textColor="#757575"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_below="@+id/email2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="33dp"
        android:autofillHints=""
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:hint="@string/emailExam"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/email"
        android:textAppearance="@style/sign_up"
        android:textColor="#757575"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="654dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:lineSpacingExtra="-5sp"
        android:text="@string/login"
        android:textAppearance="@style/some_id1"
        android:verticalScrollbarPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logotype4"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="236dp"
        android:contentDescription="@string/lunapay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/component"
        tools:ignore="ImageContrastCheck" />

</RelativeLayout>