<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_emp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_screen">

    <!-- Email адрес -->

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_below="@+id/password_repeat"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="33dp"
        android:autofillHints=""
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#040303"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_below="@+id/editTextTextPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/password_repeat"
        android:textAppearance="@style/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_1"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/logotype3"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="236dp"
        android:contentDescription="@string/lunapay"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/component"
        tools:ignore="ImageContrastCheck" />


    <TextView
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="654dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:lineSpacingExtra="-5sp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id1"
        android:verticalScrollbarPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/email"
        android:textAppearance="@style/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/password_1"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_below="@+id/editTextTextEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/password"
        android:textAppearance="@style/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_below="@+id/password_1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="33dp"
        android:autofillHints=""
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#070101"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_1"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="33dp"
        android:autofillHints=""
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:hint="@string/emailExam"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button_start2"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_above="@+id/register"
        android:layout_alignParentStart="true"
        android:layout_marginStart="71dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_start2"
        android:fontFamily="@font/roboto_bold"
        android:onClick="onClick"
        android:text="@string/sign_up_start"
        android:textAppearance="@style/sign_up_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/register"
        android:textAppearance="@style/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="21sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/register2"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="65dp"
        android:layout_toEndOf="@+id/register"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:onClick="run"
        android:text="@string/register2"
        android:textAppearance="@style/register2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="21sp"
        tools:ignore="TouchTargetSizeCheck" />


</RelativeLayout>