<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_screen">

    <Button
        android:id="@+id/button_start4"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_start2"
        android:fontFamily="@font/roboto_bold"
        android:onClick="onClick"
        android:text="@string/set"
        android:textAppearance="@style/sign_up_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/lastName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editPatronymic"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/patronymic"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="63dp"
        android:layout_height="34.42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/button_back"
        android:onClick="run"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:lineSpacingExtra="15sp"
        android:text="@string/profile"
        android:textAppearance="@style/profile"
        android:translationY="-7.52sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="23sp"
        android:text="@string/profile2"
        android:textAppearance="@style/profile2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/firstName"
        android:textAppearance="@style/profile3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile2"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/firstName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editFirstName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/lastName"
        android:textAppearance="@style/profile3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/patronymic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editLastName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/patronymic"
        android:textAppearance="@style/profile3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPatronymic"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/birthday"
        android:textAppearance="@style/profile3"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/numberPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editBirthday"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/numberPhone"
        android:textAppearance="@style/profile3" />

    <EditText
        android:id="@+id/editBirthday"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/birthday"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:hint="@string/yyyy_mm_dd"
        android:inputType="date"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />



    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/numberPhone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="1dp"
        android:autofillHints=""
        android:drawableBottom="@drawable/line_1"
        android:ems="10"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck"
        android:inputType="numberDecimal" />

</RelativeLayout>