<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_screen"
    android:onClick="onClick"
    tools:context=".SetPinCode">

    <com.example.bank.modelPinCode
        android:id="@+id/fpc_1"
        android:layout_width="347dp"
        android:layout_height="47dp"
        android:layout_below="@+id/set_pin"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/button_back2"
        android:layout_width="63dp"
        android:layout_height="34.42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/button_back"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/set_pin_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/button_back2"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:lineSpacingExtra="15sp"
        android:text="@string/set_pin_code"
        android:textAppearance="@style/set_pin_code"
        android:translationY="-7.52sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/please_set_"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="106dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="7sp"
        android:text="@string/please_set_"
        android:textAppearance="@style/please_set_"
        android:translationY="-3.62sp" />

    <TextView
        android:id="@+id/set_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/please_set_"
        android:layout_alignParentStart="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="15dp"
        android:gravity="top"
        android:text="@string/set_pin"
        android:textAppearance="@style/set_pin" />

    <Button
        android:id="@+id/button_start4"
        android:layout_width="195dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_start2"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/set"
        android:textAppearance="@style/sign_up_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</RelativeLayout>